first attempt on match filtering

--- a/.gitignore
+++ b/.gitignore
@@ -368,7 +368,7 @@ poetry.toml
 pyrightconfig.json
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
