--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,47 +1,58 @@
-cmake_minimum_required(VERSION 3.15..3.27)
+cmake_minimum_required(VERSION 3.15)
 cmake_policy(SET CMP0148 OLD)
 
-# Set a name and a version number for your project:
-project(
-  loki
-  VERSION 0.0.1
-  LANGUAGES CXX)
+project(loki VERSION 0.0.1 LANGUAGES CXX)
+
+# Configuration options
+option(BUILD_DOCS "Build documentation" OFF)
+option(BUILD_PYTHON "Build Python bindings" ON)
+option(BUILD_TESTING "Build tests" OFF)
+option(ENABLE_CLANG_TIDY "Run Clang Tidy to get static analysis" OFF)
 
 # Define the minimum C++ standard that is required
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)
 
-set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 # Initialize some default paths
 include(GNUInstallDirs)
+include(CTest)
 include(cmake/CPM.cmake)
 
-cpmaddpackage(
+# Find dependencies
+CPMFindPackage(
   NAME spdlog
   VERSION 1.13.0
-  GIT_REPOSITORY https://github.com/gabime/spdlog
+  GITHUB_REPOSITORY gabime/spdlog
   OPTIONS "SPDLOG_INSTALL ON"
 )
-
+if(BUILD_TESTING)
+  CPMFindPackage(
+    NAME Catch2
+    VERSION 3.5.3
+    GITHUB_REPOSITORY catchorg/Catch2 
+  )
+  list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
+endif()
 find_package(FFTW REQUIRED)
-
-# Add the include directory to the include path
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${FFTW_INCLUDES}")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${FFTW_INCLUDES}")
-
-# Configuration options
-option(BUILD_PYTHON "Enable building of Python bindings" ON)
 
 # Build the c++ library
 add_subdirectory(lib)
+
+# Build the c++ tests
+if(BUILD_TESTING)
+  include(Catch)
+  add_subdirectory(tests/cpp)
+endif()
 
 # Build the python bindings
 if(BUILD_PYTHON)
   add_subdirectory(src)
 endif()
 
-target_link_libraries(loki PRIVATE spdlog::spdlog_header_only ${FFTW_LIB} ${FFTWF_LIB})
+target_include_directories(loki PRIVATE ${FFTW_INCLUDE_DIRS})
+target_link_libraries(loki PRIVATE spdlog::spdlog_header_only ${FFTW_FLOAT_LIB})
 
 # Add an alias target for use if this project is included as a subproject in another project
 add_library(loki::loki ALIAS loki)
@@ -52,12 +63,10 @@ install(
   EXPORT loki_config
   RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
 
-install(
-  EXPORT loki_config
-  NAMESPACE loki::
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/loki)
+install(EXPORT loki_config NAMESPACE loki:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/loki)
 
 install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
