--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(tests loki_t.cpp)
+add_executable(tests loki_t.cpp scores_t.cpp)
 target_link_libraries(tests PUBLIC loki Catch2::Catch2WithMain)
 
 # allow user to run tests with `make test` or `ctest`
