--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,10 @@ Github = "https://github.com/pravirkr/loki"
 test = ["pytest"]
 docs = ["cmake", "breathe", "sphinx_rtd_theme"]
 
-[tool.scikit-build.cmake.define]
-BUILD_PYTHON = "ON"
+[tool.scikit-build]
+cmake.build-type = "Release"
+cmake.define = {BUILD_PYTHON = "ON", BUILD_TESTING = "OFF", ENABLE_FAST_MATH = "ON"}
+
 
 [tool.cibuildwheel]
 test-extras = "test"
