--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,8 @@
+set(PYBIND11_FINDPYTHON ON)
 find_package(pybind11 CONFIG REQUIRED)
-pybind11_add_module(libloki loki_python.cpp)
-target_include_directories(libloki PUBLIC ${CMAKE_SOURCE_DIR}/lib)
-target_link_libraries(libloki PUBLIC loki)
-install(TARGETS libloki DESTINATION loki)
+
+set(PYMODULE_NAME libloki)
+pybind11_add_module(${PYMODULE_NAME} loki_python.cpp)
+target_include_directories(${PYMODULE_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_link_libraries(${PYMODULE_NAME} PUBLIC ${LIBRARY_NAME})
+install(TARGETS ${PYMODULE_NAME} DESTINATION ${LIBRARY_NAME})
