--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -6,11 +6,14 @@ CPMFindPackage(
 list(APPEND CMAKE_MODULE_PATH ${Catch2_DIR})
 list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
 
+set(TARGET_TESTS tests)
 file(GLOB TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
-add_executable(tests ${TEST_SOURCES})
-target_link_libraries(tests PUBLIC loki Catch2::Catch2WithMain)
+
+add_executable(${TARGET_TESTS} ${TEST_SOURCES})
+target_include_directories(${TARGET_TESTS} PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(${TARGET_TESTS} PRIVATE ${CMAKE_SOURCE_DIR}/lib)
+target_link_libraries(${TARGET_TESTS} PRIVATE ${LIBRARY_NAME} Catch2::Catch2WithMain)
 
 include(Catch)
 include(CTest)
-# allow user to run tests with `make test` or `ctest`
-catch_discover_tests(tests)
+catch_discover_tests(${TARGET_TESTS})
