thresholding module completed

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -30,6 +30,33 @@ if(Boost_ADDED)
   target_include_directories(Boost::boost INTERFACE ${Boost_SOURCE_DIR}/include)
 endif()
 
+CPMFindPackage(
+  NAME HighFive
+  VERSION 2.10.0
+  URL https://github.com/BlueBrain/HighFive/archive/refs/tags/v2.10.0.tar.gz
+  DOWNLOAD_ONLY YES
+  OPTIONS "HIGHFIVE_FIND_HDF5 OFF"
+)
+
+if(HighFive_ADDED)
+  add_library(HighFive INTERFACE IMPORTED)
+  find_package(HDF5 REQUIRED)
+  target_link_libraries(HighFive INTERFACE HDF5::HDF5)
+  target_include_directories(HighFive INTERFACE ${HighFive_SOURCE_DIR}/include)
+endif()
+
+CPMFindPackage(
+  NAME indicators
+  VERSION 2.3
+  URL https://github.com/p-ranav/indicators/archive/refs/tags/v2.3.tar.gz
+  DOWNLOAD_ONLY YES
+)
+
+if(indicators_ADDED)
+  add_library(indicators::indicators INTERFACE IMPORTED)
+  target_include_directories(indicators::indicators INTERFACE ${indicators_SOURCE_DIR}/include)
+endif()
+
 find_package(FFTW REQUIRED)
 find_package(OpenMP REQUIRED)
 
@@ -39,11 +66,20 @@ file(GLOB LIBRARY_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 add_library(${LIBRARY_NAME} ${LIBRARY_SOURCES})
 
-target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(
-  ${LIBRARY_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${FFTW_INCLUDE_DIRS} ${Boost_SOURCE_DIR}
+  ${LIBRARY_NAME}
+  PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>
+  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${FFTW_INCLUDE_DIRS}
 )
+
 target_link_libraries(
-  ${LIBRARY_NAME} PUBLIC coverage_config spdlog::spdlog_header_only ${FFTW_FLOAT_LIB}
-                         OpenMP::OpenMP_CXX Eigen3::Eigen Boost::boost
+  ${LIBRARY_NAME}
+  PUBLIC coverage_config
+         spdlog::spdlog_header_only
+         Eigen3::Eigen
+         Boost::boost
+         HighFive
+         indicators::indicators
+         ${FFTW_FLOAT_LIB}
+         OpenMP::OpenMP_CXX
 )
