--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -1,14 +1,15 @@
 CPMAddPackage(
   NAME benchmark
-  VERSION 1.8.4
+  VERSION 1.9.2
   GITHUB_REPOSITORY google/benchmark
   OPTIONS "BENCHMARK_ENABLE_WERROR OFF" "BENCHMARK_FORCE_WERROR OFF" "BENCHMARK_ENABLE_TESTING OFF"
 )
 
-set(TARGET_BENCHMARKS ${PROJECT_NAME}_bench)
-file(GLOB BENCH_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+set(LOKI_BENCH_TARGET ${PROJECT_NAME}_benchmarks)
+file(GLOB LOKI_BENCH_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-add_executable(${TARGET_BENCHMARKS} ${BENCH_SOURCES})
-target_include_directories(${TARGET_BENCHMARKS} PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(${TARGET_BENCHMARKS} PRIVATE ${CMAKE_SOURCE_DIR}/lib)
-target_link_libraries(${TARGET_BENCHMARKS} PRIVATE ${LIBRARY_NAME} benchmark::benchmark_main)
+add_executable(${LOKI_BENCH_TARGET} ${LOKI_BENCH_SOURCES})
+target_include_directories(
+  ${LOKI_BENCH_TARGET} PRIVATE ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/lib
+)
+target_link_libraries(${LOKI_BENCH_TARGET} PRIVATE ${LOKI_LIBRARY_NAME} benchmark::benchmark_main)
