--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ endif()
 if(POLICY CMP0167)
   cmake_policy(SET CMP0167 NEW)
 endif()
+set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
 
 # Configuration options
 option(${PROJECT_NAME}_BUILD_DOCS "Build documentation" OFF)
